--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
   padding-bottom: 30px;
   padding-top: 40px;
 }
+.title-text {
+  text-align: center;
+}
 .container {
   max-width: 400px;
   margin: 0 auto;
